--- a/filepath-compat.cabal
+++ b/filepath-compat.cabal
@@ -1,5 +1,5 @@
 cabal-version:      2.2
-name:               filepath
+name:               filepath-compat
 version:            2.0.0.3
 
 -- NOTE: Don't forget to update ./changelog.md
